--- a/src/main/webapp/WEB-INF/views/congratulation.html
+++ b/src/main/webapp/WEB-INF/views/congratulation.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Congratulation</h1>
+    <h1 th:text="${winner} + ' won'">Congratulation</h1>
 </body>
 </html>
