--- a/src/main/webapp/WEB-INF/views/draw.html
+++ b/src/main/webapp/WEB-INF/views/draw.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Draw</title>
 </head>
 <body>
-    <h1 th:text="${winner} + ' won'">Congratulation</h1>
+    <h1>Draw</h1>
     <a th:href="@{/restart}">Restart</a>
 </body>
 </html>
