added logging of game result

--- a/src/main/webapp/WEB-INF/views/roleChoice.html
+++ b/src/main/webapp/WEB-INF/views/roleChoice.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Choose your role</h1>
     <p>
-        <a th:href="@{/createGame(role=cross)}">Cross</a>
-        <a th:href="@{/createGame(role=zero)}">Zero</a>
+        <a th:href="@{/createGame(role=CROSS)}">Cross</a>
+        <a th:href="@{/createGame(role=ZERO)}">Zero</a>
     </p>
 </body>
 </html>
